# gravitySimJS

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  main.py  pyproject.toml
.cache/clangd/index/: gravity_sim.cpp.1E404F4F1AFB5E43.idx  linmath.h.9CF592B7E31AD638.idx
cppFiles/: CMakeCache.txt  Makefile  README.md
cppFiles/.cache/clangd/index/: glad.h.993D059FE0E329C8.idx
cppFiles/include/glad/: glad.h
cppFiles/src/: glad.c  gravity_sim.cpp  saveTriangles.cpp
src/: saveInfo.cpp
